fix: update navbar link active style on mobile view

--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -12,7 +12,7 @@
   font-weight: 600;
 }
 
-.navbar-nav .nav-link.active::before {
+.navbar-nav .nav-link.active span::before {
   --size: 8px;   /* the size on the corner */
   content: "";
   position: absolute;
